--- a/cookbooks/apt/.gitignore
+++ b/cookbooks/apt/.gitignore
@@ -1,17 +1,14 @@
-metadata.json
 .vagrant
 Berksfile.lock
+Gemfile.lock
 *~
 *#
 .#*
 \#*#
 .*.sw[a-z]
 *.un~
-/cookbooks
-
-# Bundler
-Gemfile.lock
-bin/*
-.bundle/*
-.kitchen/
+.bundle
+.cache
+.kitchen
+bin
 .kitchen.local.yml
